Wed Jul 31 21:42:33 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Group tests.

Wed Jul 31 21:37:51 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_mixin.rb (TestNotationDecl#test_name):
	  Move to ...
	* test/rexml/test_notationdecl_parsetest.rb
	  (TestNotationDecl#test_name): ... here.

Wed Jul 31 21:37:47 2013  Kouhei Sutou  <kou@cozmixng.org>

Wed Jul 31 21:31:49 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Remove setup because it
	  doesn't share anything with other tests.

Wed Jul 31 21:24:55 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_attributes_mixin.rb: Remove a needless shebang.
	* test/rexml/test_notationdecl_mixin.rb: ditto.
	* test/rexml/test_doctype.rb: ditto.
	* test/rexml/test_xml_declaration.rb: ditto.
	* test/rexml/test_changing_encoding.rb: ditto.

Wed Jul 31 21:20:08 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: remove a needless shebang.

Wed Jul 31 20:11:01 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_rindex): fix bug introduced in r42269.
	  "".rindex("") should return 0.
	  (str_rindex): ditto.

Wed Jul 31 19:55:33 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (MAX_BIG2STR_TABLE_ENTRIES): Use SIZEOF_SIZE_T.
	  (power_cache_get_power0): Add rb_bug call for too bit i argument.
	  (power_cache_get_power): Simplified.

Wed Jul 31 18:32:25 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/common.rb (URI.decode_www_form_component): Use String#b.

Wed Jul 31 18:24:02 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine, mod_using, top_using): don't show
	  warnings because Refinements are no longer experimental.
	  [ruby-core:55993] [Feature #8632]

	* test/ruby/test_refinement.rb: related test.

	* NEWS: fixes for the above change.

Wed Jul 31 17:55:55 2013  Shota Fukumori  <her@sorah.jp>

	* lib/uri/common.rb (URI.decode_www_form_component):